added initial contents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,14 @@
   {{title}}
   <menu></menu>
 </mat-toolbar>
+<div class="bg">
+  <iframe class="video-bg" src="https://www.youtube.com/embed/3H84MQ_Mxhw?&loop=1&autoplay=1&playlist=3H84MQ_Mxhw" frameborder="0" allowfullscreen></iframe>
+  <img class="img-bg" src="https://scontent-kul1-1.xx.fbcdn.net/v/t31.0-8/14241549_1111689772248808_5647556587625510018_o.jpg?oh=697c6f95ae21d44b9d9af98443c93c79&oe=58F2B9E6"/>
+</div>
+<div class="fb" text-align="right">
+<button mat-button>facebook</button><br/>
+<iframe
+  src="https://www.facebook.com/plugins/page.php?locale=en_US&href=https%3A%2F%2Fwww.facebook.com%2FGaharuGading%2F&tabs=timeline&width=400&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+  width="400" height="600"
+  style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+</div>
