--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .mat-toolbar.mat-primary{
-    background: black;
+    background: rgba(0,0,0,0.5)
 }
 
 .bg {
@@ -39,7 +39,7 @@
     left: 0px;
     z-index: 0;
     content: '';
-    background: transparent url('../app/res/images/pattern.png') repeat top left;
+    background: transparent url('/app/res/images/pattern.png') repeat top left;
 }
 
 .fb {
