--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </mat-toolbar>
 <div class="bg">
   <iframe class="video-bg" src="https://www.youtube.com/embed/3H84MQ_Mxhw?&loop=1&autoplay=1&playlist=3H84MQ_Mxhw" frameborder="0" allowfullscreen></iframe>
-  <img class="img-bg" src="https://scontent-kul1-1.xx.fbcdn.net/v/t31.0-8/14241549_1111689772248808_5647556587625510018_o.jpg?oh=697c6f95ae21d44b9d9af98443c93c79&oe=58F2B9E6"/>
+  <img class="img-bg" src="https://i.imgur.com/Y2uNqAT.jpg"/>
 </div>
 <div class="fb" text-align="right">
 <button mat-button (click)='showDialog()'>facebook</button><br/>
